route for land details
